# cpp-perceptron

./: .gitignore  CMakeLists.txt  README.md  cpp-perceptron.sln  cpp-perceptron.vcxproj
docs/: perceptron-history.md  perceptron-technical-details.md
docs/superpowers/plans/: 2026-07-07-decision-boundary-visualization.md  2026-07-07-educational-perceptron-update.md  2026-07-08-logic-gate-graphs-flag.md
docs/superpowers/specs/: 2026-07-07-decision-boundary-visualization-design.md  2026-07-07-educational-perceptron-update-design.md  2026-07-08-logic-gate-graphs-flag-design.md
include/: DecisionBoundaryVisualizer.h  Perceptron.h  perceptron.h
src/: DecisionBoundaryVisualizer.cpp  Perceptron.cpp  main.cpp  perceptron.cpp
tests/: PerceptronTests.cpp
